--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost/banco?createDatabaseIfNotexist=true&useSSL=false
 spring.datasource.username=postgres
-spring.datasource.password=jarvis
+spring.datasource.password=123456
 
 spring.jpa.show-sql=true
 
